Fixed border problems
There was an error where border-right and
border-bottom were not visible. I suspect
that this is because the width of the html
and body is a decimal and not a whole number.
I have applied a quick fix by setting margin-right
and margin-bottom to 1px.

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,49 +14,22 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  height: 100%;
+  max-height: 100%;
+}
 body {
-  margin: 0;
+  height: 100%;
+  max-height: 100%;
+  margin: 0  1px 1px 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  
 }
-
-h1 {
-  text-align: center;
-}
-
-
-
-button:hover {
-  border-color: #396cd8;
-}
-button:active {
-  border-color: #396cd8;
-  background-color: #e8e8e8;
-}
-
-input,
-button {
-  outline: none;
-}
-
-#greet-input {
-  margin-right: 5px;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
     background-color: #2f2f2f;
-  }
-
-  a:hover {
-    color: #24c8db;
-  }
-
-  input,
-  button {
-    color: #ffffff;
-    background-color: #0f0f0f98;
-  }
-  button:active {
-    background-color: #0f0f0f69;
   }
 }
